src/styles/Project.css
#top-container {
  margin-bottom: 1.5rem;
}

#project-container {
  display: flex;
  padding: 50px;
  border-radius: 10px;
  box-sizing: border-box;
  border: 1px solid var(--black);
}

#project-container:hover {
  cursor: pointer;
}

#project-container:hover #circle-button {
  background: url(../images/white-arrow.png) no-repeat center center,
    var(--black);
  background-size: 24px 24px;
}

#project-container:hover .image-container {
  /*transform: rotate(-2deg);
  transition: 300ms ease-in;*/
}

.text-container {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
}

.title-text,
.description-text {
  margin-top: 0;
}

.tag {
  padding: 0px 8px 8px 8px;
  margin: 8px;
  border-bottom: 2px solid black;
}

.button-container {
  display: flex;
  flex-direction: column;
  justify-content: center;
  background: url(../images/arrow.png) no-repeat center center;
  background-size: 24px 24px;
}

#circle-button {
  border: solid var(--black) 1px;
  cursor: pointer;
  border-radius: 100%;
  background-color: transparent;
  height: 50px;
  width: 50px;
}

#project-image {
  width: 300px;
}

@media (max-width: 768px) {
  #project-container {
    flex-direction: column-reverse;
    padding: 8% 5%;
  }

  .button-container {
    visibility: hidden;
  }

  .image-container {
    display: flex;
    justify-content: center;
    margin-bottom: 1rem;
  }

  #project-image {
    width: clamp(1px, 90%, 350px);
  }
}

